--- a/css/main.css
+++ b/css/main.css
@@ -132,3 +132,12 @@ a {
     text-decoration: none;
     display: block;
 }
+
+.unselect {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+}
